cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
owo-colors = "4.2.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

[profile.dev]
incremental = true
rustflags = ["-Zthreads=8"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
trim-paths = "all" # Removes potentially privileged information from binaries.
rustflags = ["-Cdebuginfo=0"]
